<resources>
    <string name="app_name">MyCloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ic_menu_add">添加</string>
    <string name="ic_menu_wallpaper">壁纸</string>
    <string name="ic_menu_theme">主题</string>
    <string name="ic_menu_screen_mag">屏幕管理</string>
    <string name="ic_menu_hide_app">屏幕助手</string>
    <string name="ic_menu_desktop">桌面设置</string>
    <string name="ic_setting_more">系统设置</string>
    <string name="strHint"></string>
    <string name="hello">请输入联系人</string>
    <string name="phonenumber">请输入号码</string>
    <string name="contact_number">请输联系人</string>
    <string name="btn1">111</string>
    <string name="btn2">222</string>
    <string name="inputmobile">请输入手机号</string>
    <string name="button">发送</string>
    <string name="content">请输入内容</string>
    <string name="hello_c">请输入手机号码：</string>
    <string name="send">发送</string>
    <string name="myTV">数据库演示</string>
    <string name="strbt1">插入数据</string>
    <string name="CB1">馒头</string>
    <string name="CB2">面条</string>
    <string name="CB3">米饭</string>
    <string name="CB4">汉堡</string>
    <string name="myTV2">我是第二个Activity</string>
    <string name="name">用户名：</string>
    <string name="key">密码：</string>
    <string name="strbtn2">删除数据</string>
    <string name="strbt3">查询数据</string>
    <string name="strbtn4">更新数据</string>
    <string name="text1">姓名：</string>
    <string name="text2">年龄：</string>
    <string name="text3">籍贯：</string>
    <string name="mobile">Please input the TEL No.</string>
    <string name="message">send successfully!</string>
</resources>